# storage/api-docs/api-docs.json
@@ -13,6 +13,209 @@
     ],
     "paths": {
         "/": {},
+        "/api/v1/categories": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "دریافت لیست همه‌ی دسته‌بندی‌ها",
+                "operationId": "9a80182a5d69c811c8183bde35601f85",
+                "responses": {
+                    "200": {
+                        "description": "لیست دسته‌بندی‌ها",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/CategoryResponse"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden (نیاز به 'view categories')"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "ایجاد دسته‌بندی جدید",
+                "operationId": "1b6923a918d236234ee09bfce8128e18",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "ایجاد موفق",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CategoryResourceWrapped"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden (نیاز به 'create categories')"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/categories/{category}": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "دریافت جزئیات یک دسته‌بندی",
+                "operationId": "6c05e295b14bee6def396c7f753d487a",
+                "parameters": [
+                    {
+                        "name": "category",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "موفق",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CategoryResourceWrapped"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden (نیاز به 'view categories')"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "به‌روزرسانی یک دسته‌بندی",
+                "operationId": "59e75954e227351e44efc4a482816cf8",
+                "parameters": [
+                    {
+                        "name": "category",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "موفق",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CategoryResourceWrapped"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden (نیاز به 'edit categories')"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "حذف یک دسته‌بندی",
+                "operationId": "aa439a4c4078cd1b2e43c1fab026683e",
+                "parameters": [
+                    {
+                        "name": "category",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "حذف موفق (No Content)"
+                    },
+                    "403": {
+                        "description": "Forbidden (نیاز به 'delete categories')"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/products": {
             "get": {
                 "tags": [
@@ -420,17 +623,37 @@
     },
     "components": {
         "schemas": {
+            "CategoryRequest": {
+                "title": "Category Request Body",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "example": "clothes"
+                    }
+                },
+                "type": "object"
+            },
             "CategoryResponse": {
                 "title": "Category Response",
                 "properties": {
                     "id": {
-                        "description": "Transform the resource into an array.",
                         "type": "integer",
                         "example": 1
                     },
                     "name": {
                         "type": "string",
                         "example": "Electronic"
+                    }
+                },
+                "type": "object"
+            },
+            "CategoryResourceWrapped": {
+                "properties": {
+                    "data": {
+                        "$ref": "#/components/schemas/CategoryResponse"
                     }
                 },
                 "type": "object"
@@ -702,6 +925,10 @@
         {
             "name": "Authentication",
             "description": "Endpoint for user authentication"
+        },
+        {
+            "name": "Categories",
+            "description": "Categories"
         }
     ]
 }
